Fix dark mode chips for resume

--- a/src/components/pages/Resume.css
+++ b/src/components/pages/Resume.css
@@ -10,6 +10,10 @@
   color: black;
 }
 
+.dark-mode .chip span {
+  color: white;
+}
+
 .resume-download-button-container {
   display: flex;
   justify-content: center;
